[java] cleanup: use getLast/getFirst/etc.
GitOrigin-RevId: e77d2952e8d83aedd00784a2b3290c6c92460717